HW from WK 3 and WK 4

--- a/jQuery Plugins- The Carousel Challenge/css/main.css
+++ b/jQuery Plugins- The Carousel Challenge/css/main.css
@@ -316,14 +316,11 @@ footer {
   }
 }
 
+.slick-dots li button:before{
+  font-size: 16;
+  color: white;
+}
 
-
-
-
-
-
-
-
-
-
-
+.slick-dots li.slick-active button:before {
+  color: white;
+}
